# Demonology

./: .gitignore  AGENT_CAPABILITIES.md  CHANGELOG.md  DOCUMENTATION.md  INSTALL.md  LISCENSE  QUICKSTART.md  README.md  SCRIPTS.md  STABILITY.md  TOOLS.md  TOOL_ACCESS_VERIFICATION.py  UNREAL_ENGINE_IMPORT_GUIDE.md  auto-restart-server.sh  config.yaml  demo_unreal_game_creation.py  demonology_improvements.md  kill.sh  liscense  llama-server-nosudo.sh  llama-server-q8-extended.sh  llama-server-ultra-quantized.sh  pyproject.toml  requirements-dev.txt  requirements.txt  restart-llama.sh  test.mid  test_fixed.mid
demonology/: __init__.py  __main__.py  cli.py  client.py  config.py  diagnostic.py  themes.py  tools.py  tools_legacy.py  ui.py  utils.py
demonology/tools/: __init__.py  audio.py  base.py  codebase.py  execution.py  file_ops.py  heightmap_generator.py  media.py  model3d_generator.py  mpq_extractor.py  project.py  reverse_eng.py  sheet_music.py  sheet_music_omr.py.py  unreal_asset.py  unreal_blueprint.py  unreal_build.py  unreal_gameplay.py  unreal_project.py  web.py  wow_archive_orchestrator.py  wow_auto_scene.py  wow_blp_texture.py  wow_bls_shader.py  wow_dbc_parser.py  wow_m2_converter.py  wow_model_converter.py  wow_scene_bundler.py  wow_to_unreal.py  wow_world_converter.py
docs/: 3D_MODEL_GENERATOR.md  HEIGHTMAP_GENERATOR.md  SHEET_MUSIC_OMR.md
unreal_assets_onyxia/: OnyxiaLairInstance_00_00.glb
wow_unreal_workspace/extracted/: (attributes)  (listfile)
wow_unreal_workspace/extracted/Creature/AllianceRider/: DwarfMaleHairSkin.blp
wow_unreal_workspace/extracted/Creature/BASILISK/: BASILISKSTUN.BLP
wow_unreal_workspace/extracted/Creature/BogBeast/: BogBeast.m2
wow_unreal_workspace/extracted/Creature/CRAB/: CRABREFLECT.BLP
wow_unreal_workspace/extracted/Creature/ChineseDragon/: ChineseDragon.m2  ChineseDragonSkinGreen.blp
wow_unreal_workspace/extracted/PARTICLES/: GRADIENT64BA.BLP  RED_GLOW2.BLP  SNOW1.BLP
wow_unreal_workspace/extracted/SPELLS/: ALPHACLOUD.BLP  AURARUNE256.BLP  AcidBurn.m2  ArcaneShot_Area.m2  Banish_Chest_Purple.m2  BattleStance_Impact_Head.m2  BestowDisease_Impact_Chest.m2  BloodBolt_Chest.m2  BurrowEarth_Brown_Missile.m2  CTF_GENERIC_TRAIL.blp  Confused_State_Head.m2  CreateSoulstone_Cast.m2  Creature_SpellPortal_Purple.m2  CrowsGray.blp  CrowsPurple.blp  DeathBolt_Missile_Low.m2  DeathCoil_Impact_Chest.m2  DefensiveStance_Impact_Head.m2  DetectInvis_Impact_Base.m2  Disarm_Impact_Chest.m2  Dust6ColorRed.blp  ExploderTrail.m2  FIRE1.BLP  FireWard_Impact_Chest.m2  Fire_ImpactDD_Uber_Chest.m2  Firecrackers_Thrown.m2  Fireshieldfinal_Impact_Head.m2  Fireworks_Blue_01.m2  Fireworks_RWB_01.m2  FlameBreath180.m2  Flare_Cast_Base.m2  Flare_State_Base.m2  FocusedCasting_State_Chest.m2  FrostWard_Impact_Chest.m2  GENERICGLOW2BA.BLP  GRADIENT64FLIPA.BLP  GiantInsectSwarm_State_Chest.m2  HordeCTFflag_spell.m2  ICESLICK_AREA.BLP  IceNuke_Base_Impact.m2  (+63 more)
(+2314 files in other folders)
